--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.43.3",
@@ -30,18 +33,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "^2.25.2",
