--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-leaflet": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
