--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
