--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "emailjs": "^3.6.0",
+    "is-resolvable": "^1.1.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
