--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "emailjs": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
@@ -16,6 +17,7 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
+    "react-grid-carousel": "^1.0.1",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-router-dom": "^5.3.0",
