--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
