--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-grid-carousel": "^1.0.1",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
